...
import com.haidoan.android.stren.R
import com.haidoan.android.stren.app.navigation.AppBarConfiguration
import com.haidoan.android.stren.app.navigation.TopLevelDestination
import com.haidoan.android.stren.core.designsystem.theme.Gray60
import com.haidoan.android.stren.core.designsystem.theme.poppins

const val TEST_TAG_BOTTOM_NAV = "Navigation-Bottom-Bar"
const val TEST_TAG_TOP_BAR = "Navigation-Top-Bar"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun StrenSmallTopAppBar(
    modifier: Modifier = Modifier,
    title: String,
...
