...
        )
        composable(route = TopLevelDestination.DASHBOARD.route) {
            Box(
                modifier = Modifier
                    .fillMaxSize()
                    .background(color = Color.Black)
                    .testTag("Screen-Dashboard")
            )
            if (!isUserSignedIn) {
                navController.navigate(NAV_ROUTE_AUTH) {
                    launchSingleTop = true
                    popUpTo("Test") { inclusive = true }
                }
...
